# kairos

./: .gitignore  Cargo.toml  LICENSE.md  README.md
kairos-core/: Cargo.toml
kairos-core/examples/: autoclock_wasi.rs  compare_system.rs  no_std_smoke.rs
kairos-core/src/: autoclock.rs  calendar.rs  clock.rs  hlc.rs  lib.rs  time.rs
kairos-core/src/autoclock/: soft_backend.rs  std_backend.rs  systick_backend.rs
kairos-core/src/clock/: manual.rs  mod.rs  rate.rs  std.rs
kairos-core/tests/: autoclock.rs  basic.rs  clocks.rs  hlc.rs  no_std.rs  time.rs
kairos-scheduler/: Cargo.toml  dhat-heap.json
kairos-scheduler/benches/: clock_bench.rs
kairos-scheduler/examples/: manual.rs  rate.rs
kairos-scheduler/src/: lib.rs  scheduler.rs
kairos-scheduler/tests/: determinism.rs  scheduler.rs
