[package]
name = "kairos-scheduler"
version = "0.1.0"
edition = "2021"

[features]
bench-guards = ["kairos-core/bench-guards"]
default = ["std"]
std = ["priority-queue/std"]
alloc = ["priority-queue", "ahash"]
autoclock-std = ["kairos-core/std", "kairos-core/autoclock-std"]
autoclock-cyccnt = ["kairos-core/autoclock-cyccnt"]
autoclock-systick = ["kairos-core/autoclock-systick"]
autoclock-soft  = ["kairos-core/autoclock-soft"]
dhat-heap = []

[dependencies]
kairos-core = { path = "../kairos-core", default-features = false }
heapless = "0.8"
priority-queue = { version = "2.7.0", default-features = false, optional = true }
ahash = { version = "0.8", default-features = false, optional = true }

[dev-dependencies]
kairos-core = { path = "../kairos-core", features = ["std", "bench-guards"] }
criterion = "0.5"
dhat = "0.3.3"


[[bench]]
name = "clock_bench"
harness = false
